# Glai

./: .gitmodules  CMakeLists.txt  README.md
Glai/: CMakeLists.txt
Glai/src/: Engine.cpp  Engine.h  EngineCore.h  Frame.cpp  Frame.h  Window.h
Glai/src/Asset/: SpriteAsset.h  Texture2DAsset.h
Glai/src/ECS/: GameSystem.h  SystemBase.h
Glai/src/Renderer/: Camera.h  Sprite.cpp  Sprite.h  Texture2D.h  Vertex.h
Glai/src/Renderer/Material/: Material.h
Glai/src/Renderer/Shader/: Shader.cpp  Shader.h
Glai/src/Renderer/Shader/Shaders/: FragmentShader.glsl  InstancedFragmentShader.glsl  InstancedVertexShader.glsl  VertexShader.glsl
Glai/src/Thread/: Job.h  JobSystem.h  ThreadPool.cpp  ThreadPool.h  ThreadSystem.h
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
